signup: updating success/failure message

--- a/Users/templates/Users/signup.html
+++ b/Users/templates/Users/signup.html
@@ -42,7 +42,7 @@
 
         {% if msg %}
         <div>
-            <p>Signup Failed: {{ msg }}!</p>
+            <h4>{{ msg }}</h4>
         </div>
         {% endif %}
 
