--- a/Users/templates/Users/login.html
+++ b/Users/templates/Users/login.html
@@ -19,12 +19,12 @@
         <form method="POST" action="">
             <div>
                 <label for="Email">Email ID:</label>
-                <input type="text" id="Email" name="Email">
+                <input type="text" name="Email">
             </div>
             <br/>
             <div>
                   <label for="Password">Password:</label>
-                  <input type="password" id="Password" name="Password">
+                  <input type="password" name="Password">
             </div>
             <br/>
             {% csrf_token %} {{form.as_p}}
