--- a/ToDos/templates/ToDos/todo_lists.html
+++ b/ToDos/templates/ToDos/todo_lists.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDoList Home</title>
+    <title>ToDo Lists</title>
 </head>
 <body>
     <h4>
         <div class='navbar'>
             {% if msg %}
-                {{ msg }} |
+                {{ msg }} 
             {% endif %}
-            <a href='/users/logout'>Logout</a> |
+            <a href='/users/logout'>(Logout?)</a>
         </div>
     </h4>
-    <h1 style="text-align: center;">Welcome to ToDoList</h1>
+    <h1 style="text-align: center;">Welcome to ToDo List App</h1>
+    <br>
     <form method="POST" action="/todos/create_todo_list">
         <label for="List Name">Create new list:</label>
-        <input type="text" name="List Name">
+        <input type="text" name="ListName">
         {% csrf_token %} {{form.as_p}}
         <input class="button" type="submit" value="Create" />
     </form>
@@ -40,8 +41,8 @@
             <tr>
                 <form method="POST" action="/todos/update_todo_list">
                     <td>
-                        <input type="text" name="New Name" value={{ ele.list_name }}>
-                        <input type="text" name="id" type="hidden" style="display:none;" value={{ ele.id }}>
+                        <input type="text" name="NewName" value={{ ele.list_name }}>
+                        <input type="text" name="ToDoListID" type="hidden" style="display:none;" value={{ ele.id }}>
                     </td>
                     <td>
                         {% csrf_token %} {{form.as_p}}
@@ -50,14 +51,13 @@
                 </form>
                 <td>
                     <form method="POST" action="/todos/delete_todo_list">
-                        <input type="text" name="id" type="hidden" style="display:none;" value={{ ele.id }}>
+                        <input type="text" name="ToDoListID" type="hidden" style="display:none;" value={{ ele.id }}>
                         {% csrf_token %} {{form.as_p}}
                         <input class="button" type="submit" value="Delete List" />
                     </form>
                 </td>
                 <td>
-                    <form method="POST" action="/todos/get_tasks">
-                        <input type="text" name="id" type="hidden" style="display:none;" value={{ ele.id }}>
+                    <form method="GET" action="/todos/tasks/{{ ele.id }}">
                         {% csrf_token %} {{form.as_p}}
                         <input class="button" type="submit" value="View Tasks" />
                     </form>
